--- a/Neminaj/Views/ItemPicker.xaml
+++ b/Neminaj/Views/ItemPicker.xaml
@@ -11,19 +11,17 @@
             <ScrollView>
                 <VerticalStackLayout>
                     <Grid
-        Padding="5"
+                        Padding="5"
         RowDefinitions="Auto, 0.15*, *"
         ColumnDefinitions="*, *" >
-                    <VerticalStackLayout Grid.ColumnSpan="2" Spacing="20">
-                        <SearchBar
-            x:Name="SearchBar"
-            IsEnabled="True"
-            Grid.Row="1"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            Placeholder="Hľadaj položku"
-            TextChanged="SearchBar_TextChanged"></SearchBar>
-                        <CollectionView 
+                        <VerticalStackLayout Grid.ColumnSpan="2" Spacing="20">
+                            <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Fill">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="10, 10, 10, 10"/>
+                                </Border.StrokeShape>
+                                <SearchBar x:Name="SearchBar" IsEnabled="True" Placeholder="Hľadaj položku" TextChanged="SearchBar_TextChanged" HorizontalOptions="Fill" />
+                            </Border>
+                            <CollectionView 
             x:Name="listItem"
             Grid.Row="2"
             Grid.Column="0"
@@ -32,23 +30,23 @@
             SelectionMode="Single"
             VerticalScrollBarVisibility="Always"
             SelectionChanged="listItem_SelectionChanged">
-                            <CollectionView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid RowDefinitions="Auto, Auto" RowSpacing="15">
-                                        <HorizontalStackLayout Grid.Row="0">
-                                            <!--<Image Grid.Row="0" HeightRequest="75" WidthRequest="75" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" Source="dotnet_bot.png"/>-->
-                                            <Label Grid.Row="0" Text="{Binding Name}" HorizontalOptions="StartAndExpand" VerticalOptions="Center" LineBreakMode="WordWrap"></Label>
-                                        </HorizontalStackLayout>
-                                        <Line  Grid.Row="1" Grid.ColumnSpan="2" BackgroundColor="DarkSlateGrey"></Line>
-                                    </Grid>
-                                </DataTemplate>
-                            </CollectionView.ItemTemplate>
-                        </CollectionView>
+                                <CollectionView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid RowDefinitions="Auto, Auto" RowSpacing="15">
+                                            <HorizontalStackLayout Grid.Row="0">
+                                                <!--<Image Grid.Row="0" HeightRequest="75" WidthRequest="75" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" Source="dotnet_bot.png"/>-->
+                                                <Label Grid.Row="0" Text="{Binding Name}" HorizontalOptions="StartAndExpand" VerticalOptions="Center" LineBreakMode="WordWrap"></Label>
+                                            </HorizontalStackLayout>
+                                            <Line  Grid.Row="1" Grid.ColumnSpan="2" BackgroundColor="DarkSlateGrey"></Line>
+                                        </Grid>
+                                    </DataTemplate>
+                                </CollectionView.ItemTemplate>
+                            </CollectionView>
 
-                    </VerticalStackLayout>
-                </Grid>
-            </VerticalStackLayout>
-        </ScrollView>
+                        </VerticalStackLayout>
+                    </Grid>
+                </VerticalStackLayout>
+            </ScrollView>
             <Border x:Name="CartCounter"
                     BackgroundColor="#E0662B"
                     HorizontalOptions="End" 
@@ -57,12 +55,6 @@
                     StrokeShape="RoundRectangle 40"
                     Margin="5"
                     StrokeThickness="0">
-                <Border.Shadow>
-                    <Shadow Offset="1,1"
-                            Brush="#E0662B"
-                            Opacity="10"
-                            Radius="10" />
-                </Border.Shadow>
                 <Border.GestureRecognizers>
                     <TapGestureRecognizer Tapped="CartCounter_TapGestureRecognizer_Tapped" />
                 </Border.GestureRecognizers>
