--- a/Neminaj/Views/ForgotPasswordView.xaml
+++ b/Neminaj/Views/ForgotPasswordView.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Neminaj.Views.ForgotPasswordView"
-             Title="Obnovenie hesla">
+             x:Class="Neminaj.Views.ForgotPasswordView">
+    
     <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
 
         <VerticalStackLayout Spacing="5">
