--- a/Neminaj/Views/LoginView.xaml
+++ b/Neminaj/Views/LoginView.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Neminaj.Views.LoginView"
-             Title=""
-             FlyoutItem.IsVisible="False">
+             FlyoutItem.IsVisible="False"
+             Shell.NavBarIsVisible="False">
 
-    <VerticalStackLayout x:Name="MainVertStackLayout" Spacing="25" Padding="30,0" VerticalOptions="Center">
+    <VerticalStackLayout x:Name="MainControlWrapper" Spacing="25" Padding="30,0" VerticalOptions="Center">
 
         <VerticalStackLayout Spacing="5">
             <Image Source="inflastoresplashscreen.png" HeightRequest="200" />
@@ -21,7 +21,7 @@
                 <Entry x:Name="EntryEmail" ToolTipProperties.Text="Zadajte e-mail" Text="{Binding Email}" TextColor="Black" Margin="20,0,0,0" VerticalOptions="Center" Placeholder="E-Mail" Keyboard="Email" TextChanged="EntryEmail_TextChanged"/>
             </Frame>
         </StackLayout>
-        
+
         <StackLayout Orientation="Horizontal">
             <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
                 <Image Source="lock_login.png" HeightRequest="20" WidthRequest="20" />
@@ -34,18 +34,21 @@
         <StackLayout Orientation="Horizontal">
             <CheckBox x:Name="chkRememberLogin" IsChecked="False" CheckedChanged="chkRememberLogin_CheckedChanged" />
             <Label Text="Zapamätať prihlásenie" TextColor="DarkGrey" FontSize="Small" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" />
-            <Label x:Name="txtForgotPassword" Text="Zabudnuté heslo" TextColor="Orange" FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalTextAlignment="Center" HorizontalTextAlignment="Center">
+        </StackLayout>
+
+        <Button x:Name="BtnLogInHttps" Text="Prihlásiť" CornerRadius="20" HorizontalOptions="Center" Clicked="BtnLogInHttps_Clicked"/>
+        
+        <StackLayout Orientation="Horizontal">
+            <Label x:Name="txtForgotPassword" Text="Zabudnuté heslo" TextColor="Orange" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" VerticalTextAlignment="Center" HorizontalTextAlignment="Center">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="txtForgotPassword_Tapped"/>
                 </Label.GestureRecognizers>
             </Label>
         </StackLayout>
 
-        <Button x:Name="BtnLogInHttps" Text="Prihlásiť" CornerRadius="20" HorizontalOptions="Center" Clicked="BtnLogInHttps_Clicked"/>
-
         <StackLayout Orientation="Horizontal" Spacing="5" HorizontalOptions="Center">
             <Label Text="Nemáte účet?" FontSize="Small" TextColor="DarkGray" />
-            <Label x:Name="txtRegister" Text=" Registrujte sa tu" TextColor="Orange" FontAttributes="Bold">
+            <Label x:Name="txtRegister" Text=" Registrujte sa tu" FontSize="Small" TextColor="Orange" FontAttributes="Bold">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Tapped="txtRegister_Tapped"/>
                 </Label.GestureRecognizers>
