--- a/Neminaj/Views/RegisterView.xaml
+++ b/Neminaj/Views/RegisterView.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Neminaj.Views.RegisterView"
-             Title="Registrácia">
+             x:Class="Neminaj.Views.RegisterView">
+    
     <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
 
         <VerticalStackLayout Spacing="5">
