--- a/Neminaj/Views/NavigationView.xaml
+++ b/Neminaj/Views/NavigationView.xaml
@@ -7,20 +7,19 @@
              xmlns:loc="clr-namespace:Microsoft.Maui.Devices.Sensors;assembly=Microsoft.Maui.Essentials"
              Title="Navigácia">
 
-    <!--<Grid>
-        <maps:Map x:Name="mappy" IsShowingUser="True" IsTrafficEnabled="True" MapType="Street">
-            <maps:Map.MapElements>
-                
-            </maps:Map.MapElements>    
+    <Grid x:Name="MainControl" RowDefinitions="*, Auto" ColumnDefinitions="*">
+        <maps:Map Grid.Row="0" Grid.Column="0" x:Name="mappy" IsShowingUser="True" IsTrafficEnabled="True" MapType="Street">
         </maps:Map>
-    </Grid>-->
 
-    <Grid>
+        <Button Grid.Row="1"  Grid.Column="0" x:Name="btnNavigate" Text="Navigovať" IsEnabled="False" Clicked="btnNavigate_Clicked" />
+    </Grid>
+
+    <!--<Grid>
         <googleMaps:Map 
             x:Name="googleMaps"
             MapType="Street"
             MyLocationEnabled="True"
             >
         </googleMaps:Map>
-    </Grid>
+    </Grid>-->
 </ContentPage>
