porieseni logout a vysiace more tlacidlo po logoute, treba ale po prihlaseni doriesit opat nacitavanie, visi to na nacitavam polozky

--- a/Neminaj/AppShell.xaml
+++ b/Neminaj/AppShell.xaml
@@ -34,7 +34,7 @@
         </Tab>
 
         <Tab Title="Odhlásenie" Icon="logout_icon.png">
-            <ShellContent ContentTemplate="{DataTemplate localViews:LoginView}" Route="LoginView"/>
+            <ShellContent ContentTemplate="{DataTemplate localViews:LogOutView}" Route="LogOutView"/>
         </Tab>
 
     </TabBar>
