--- a/Neminaj/Views/CartViewSaveCart.xaml
+++ b/Neminaj/Views/CartViewSaveCart.xaml
@@ -9,19 +9,27 @@
             <!-- Medzera -->
             
             <!-- Názov -->
-            <Label Grid.Column="1" Grid.Row="1" HorizontalOptions="Start" VerticalOptions="Center" Text="Názov"/>
-            <Entry  Grid.Column="2" Grid.Row="1" x:Name="CartListName" TextChanged="CartListName_TextChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Center" />
-            
+            <Frame Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" VerticalOptions="Center">
+                <VerticalStackLayout>
+                    <Label Grid.Column="1" Grid.Row="1" HorizontalOptions="Start" VerticalOptions="Center" Text="Názov"/>
+                    <Entry  Grid.Column="2" Grid.Row="1" x:Name="CartListName" TextChanged="CartListName_TextChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Center" />
+                </VerticalStackLayout>
+            </Frame>
+
 
             <!-- Poznámka -->
-            <Label Grid.Column="1" Grid.Row="2" HorizontalOptions="Start" VerticalOptions="Center"  Text="Poznámka"/>
-            <Entry Grid.Column="2" Grid.Row="2" x:Name="CartListNote" HorizontalOptions="Fill" VerticalOptions="Center" />
-            
+            <Frame Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" VerticalOptions="Center">
+                <VerticalStackLayout>
+                    <Label Grid.Column="1" Grid.Row="2" HorizontalOptions="Start" VerticalOptions="Center"  Text="Poznámka"/>
+                    <Entry Grid.Column="2" Grid.Row="2" x:Name="CartListNote" HorizontalOptions="FillAndExpand" VerticalOptions="Center" />
+                </VerticalStackLayout>
+            </Frame>
+                            
             <!-- Tlačidlo -->
             <Button Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" x:Name="BtnSave" Text="Uložiť" Clicked="SaveCart_Button_Clicked"/>
 
             <!-- Info text -->
-            <Label Grid.Column="1" Grid.Row="4"  Grid.ColumnSpan="2" x:Name="LblListSaved" Text="" HorizontalOptions="Center" VerticalOptions="Center" FontSize="Body" />
+            <Label Grid.Column="1" Grid.Row="4"  Grid.ColumnSpan="2" x:Name="LblListSaved" FontAttributes="Bold" FontSize="Large" Text="" HorizontalOptions="Center" VerticalOptions="Center" />
             
         </Grid>
     </ScrollView>
